Make BatchedTask generic
Uses the generic `T` to establish a link between task,
`ClusterStateTaskExecutor` and `TaskOutputs`.